--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,12 @@
     <meta name="description" content="Тест на знание истории города Салехард" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Тест на знание истории города Салехард</title>
+    <title>Я помню. Я горжусь</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      >Включите Javascript на странице, чтобы пользоваться приложением</noscript
+    >
     <div id="root"></div>
   </body>
 </html>
